tdf#80282 swpagerelsize: corner case frame size max

Before the swpagerelsize commits,
(specifically 7c7fdf3e97bbf2301f9938082d4d44162f4ec3c0),
the max size was always Prt(). The regression comes if
the RelFrame is a pageFrame (like when the image is
anchored to the page). Then sometimes no maximum is set.

Change-Id: If1e93ce670bd0908eb2d1f89dabbe9861163d29e